# dyninst

./: .clang-format  .cmake-format.yaml  .cvsignore  .github_changelog_generator  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .syntastic_cpp_config  .travis.yml  ALL_BUILD.vcxproj  AMDGPU_CALL_SUPPORT_NOTES.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  ChangeLog  Dockerfile  Dyninst.sln  DyninstAPI.sln  DyninstConfigVersion.cmake  INSTALL  INSTALL.vcxproj  LGPL  Makefile  Makefile.genspec  Paradyn.sln  README  README.dyninst  README.md  SECURITY.md  TODO  UpgradeLog.XML  ZERO_CHECK.vcxproj  aclocal.m4  appveyor.yml  boost.m4  c++11.cmake  checkMutateeCompiler.cmake  configure  (+22 more)
autodyninst/: Makefile.in  aclocal.m4  check_lib_type.py  config.status  configure  configure.in  default_component  m4.m4  make.config.local.in
common/: CMakeLists.txt  INSTALL.vcxproj  Makefile  common.sln  common.vcproj  common.vcxproj  dthread-win.C  make.module.tmpl  nmake.module.tmpl
common/amd64-unknown-freebsd7.2/: Makefile
common/doc/: manual_commands.tex  manual_frontpage.rst  manual_frontpage.tex
common/docs/: Makefile  README  libutil.1  libutilPVM.1  logo-lite.ps  rpcUtil.1
common/h/: Annotatable.h  Architecture.h  BG_AuxvReader.h  Buffer.h  ByteArray.h  Dictionary.h  DictionaryLite.h  DynAST.h  DynIntervalMap.h  Edge.h  Elf_X.h  Graph.h  Histogram.h  IBSTree-fast.h  IBSTree.h  Ident.h  Instruction.h  IntervalTree.h  Line.h  List.h  MachSyscall.h  MappedFile.h  Node.h  NodeIterator.h  Object-aix.h  Object-bsd.h  Object-cm5.h  Object-coff.h  Object-elf.h  Object-elf32.h  Object-hpux.h  Object-nt.h  Object.h  Pair.h  PriorityQueue.h  ProcReader.h  Queue.h  Serialization.h  Singleton.h  Stack.h  (+112 more)
common/i386-unknown-freebsd7.2/: Makefile
common/i386-unknown-freebsd8.0/: Makefile
common/i386-unknown-linux2.4/: Makefile
common/i386-unknown-vxworks6.x/: Makefile
common/i386-unknown-winXP/: Makefile
common/ia64-unknown-linux2.4/: .cvsignore  Makefile
common/ppc32-unknown-vxworks6.x/: Makefile
common/ppc32_bgcompute/: Makefile
common/ppc32_bgl_compute/: Makefile
common/ppc32_bgl_ion/: Makefile
common/ppc32_bgp/: Makefile
common/ppc32_bgp_compute/: Makefile
common/ppc32_bgp_ion/: Makefile
common/ppc32_bluegene/: Makefile
common/ppc32_linux/: Makefile
common/ppc64-unknown-linux2.4/: Makefile
common/ppc64_bgq/: Makefile
common/ppc64_bgq_ion/: Makefile
common/ppc64_linux/: Makefile
common/rs6000-ibm-aix5.1/: .cvsignore  Makefile
common/rs6000-ibm-aix64-5.2/: Makefile
common/sparc-sun-solaris2.8/: .cvsignore  Makefile
common/sparc-sun-solaris2.9/: Makefile
common/src/: AST.C  Absloc.C  Annotatable.C  AuxvParser.C  AuxvParser.h  BG_AuxvReader.C  BG_AuxvReader.h  Buffer.C  ByteArray.C  CircularBuffer.C  DOT.C  Dictionary.C  DictionaryLite.C  Edge.C  Elf_X.C  Graph.C  Ident.C  Ident.h  IntervalTree.h  Line.h  LinearVariable.h  List.C  List.h  LockTraits.h  MachSyscall.C  MappedFile.C  MappedFile.h  Node.C  NodeIterator.h  Object-coff.C  Object-elf.C  Object-elf32.C  Object-nt.C  Object.C  Pair.h  PriorityQueue.C  Singleton.h  String.C  SymLite-elf.C  SyscallInformation.C  (+165 more)
common/x86_64-unknown-linux2.4/: .cvsignore  Makefile
common/x86_64_cnl/: Makefile
dwarf/: CMakeLists.txt  Makefile  make.module.tmpl
dwarf/h/: dwarfExprParser.h  dwarfFrameParser.h  dwarfHandle.h  dwarfResult.h  dwarf_cu_info.h  dwarf_cu_info.hpp  dwarf_names.h  dwarf_names.hpp  dwarf_unit_info.h
dwarf/src/: dwarfExprParser.C  dwarfFrameParser.C  dwarfHandle.C  dwarfResult.C  dwarf_subrange.cpp  dwarf_subrange.h
dwarf/x86_64-unknown-linux2.4/: Makefile
dynC_API/: CMakeLists.txt  make.module.tmpl  make.test.module.tmpl  make.test.module.tmpl~
dynC_API/doc/: 1-DynC.rst  1-DynC.tex  2-Language.tex  A-TheDyninstDomain.rst  A-TheDyninstDomain.tex  Makefile  dynC_API.rst  dynC_API_Manual.tex  dyncapi.tex
dynC_API/h/: dynC.h  dynC.tab.h  snippetGen.h
dynC_API/i386-unknown-linux2.4/: dynC.output  dynC.tab.C  dynC.tab.h  lex.dynC.C
dyninstAPI/: CHANGELOG  CMakeLists.txt  INSTALL.vcxproj  README  README.md  dyninstAPI.vcproj  dyninstAPI.vcxproj  make.module.tmpl  nmake.module.tmpl  nosynchfuncs.txt
dyninstAPI_RT/: CMakeLists.txt  DyninstAPI_RT.vcproj  DyninstAPI_RT.vcxproj  INSTALL.vcxproj  dyninstAPI_RT_static.vcxproj  make.module.tmpl  nmake.module.tmpl
elf/: CMakeLists.txt  make.module.tmpl
examples/: CMakeLists.txt  InterestingProgram.cpp  binary_analysis.cpp  instrumenting_a_function.cpp  instrumenting_memory_access.cpp  retee.cpp
instructionAPI/: CHANGELOG  CMakeLists.txt  INSTALL.vcxproj  aarch64.output.tmp  aarch64_manual_pareser.py  aarch64_pseudocode_extractor.py  aarch64_sysreg_builder.py  arm_manual_parser.py  arm_sysreg_builder.py  capstone-interation.py  instructionAPI.conf  instructionAPI.vcproj  instructionAPI.vcxproj  make.module.tmpl  ppc_manual_parser.pl
isa_spec_manager/: CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  _clang-format
parseAPI/: CHANGELOG  CMakeLists.txt  INSTALL.vcxproj  README  README.md  make.module.tmpl  parseAPI.vcproj  parseAPI.vcxproj
parseThat/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile.in  README  README.md  configure  configure.ac  pMakefile.in
patchAPI/: CMakeLists.txt  INSTALL.vcxproj  make.module.tmpl  patchAPI.vcproj  patchAPI.vcxproj
proccontrol/: .syntastic_cpp_config  CHANGELOG  CLAUDE.md  CMakeLists.txt  INSTALL.vcxproj  README.md  d4.md  dumplibpthread.asm  make.module.tmpl  model.md  pcontrol.vcxproj  proccontrol.vcproj  proccontrol.vcxproj  proccontrol.vcxproj.filters
stackwalk/: CMakeLists.txt  INSTALL.vcxproj  README.md  make.module.tmpl  stackwalk.vcproj  stackwalk.vcxproj
symlite/: CMakeLists.txt  README.md  make.module.tmpl
symtabAPI/: CHANGELOG  CMakeLists.txt  INSTALL.vcxproj  README  README.md  SymtabAPI.sln  make.module.tmpl  nmake.module.tmpl  symtabAPI.vcproj  symtabAPI.vcxproj
tests/: CMakeLists.txt  README.md  cft_tests.cpp  cft_tests.h  memory_tests.cpp  memory_tests.h  opcode_tests.cpp  opcode_tests.h  register_tests.cpp  register_tests.h
(+10001 files in other folders)
